Revert "fix(DataTable): add fallback to text-align:start (#1623)"
This reverts commit cf1c4bcfa0f95177388135a01653692af2a6c774.

--- a/src/DataTable/DataTable.scss
+++ b/src/DataTable/DataTable.scss
@@ -9,8 +9,7 @@
 
 .table th {
   background-color: rgba(240, 243, 247, 0.5);
-  text-align: left;
-  text-align: start;  // not supported in IE11 & Edge; 'left' as fallback
+  text-align: start;
   color: $paletteD3;
   border-top: solid 1px $D60;
 }
